--- a/inst/rmd/P1.Rmd
+++ b/inst/rmd/P1.Rmd
@@ -112,8 +112,8 @@ maxQryRows <- 0
 The purpose of the data quality program is to characterize the data in CHORDS VDW 3.1 priority level 1 (P1) tables. The P1 tables include the following: DEMOGRAPHICS, ENCOUNTERS, CENSUS_LOCATION, DIAGNOSES, VITAL_SIGNS, and BENEFITS. The program uses a series of SQL queries operationalized using RStudio to produce this report. These tables provide descriptive information about data stored in a data partner’s VDW and can be used to assess data model conformance, data plausibility, and data completeness. This data quality report was generated from CHORDS `r params$DBName`.
 
 ## Information about the QA Program 
-Data Partner: TEST
-Analyst: Emily Bacon
+Data Partner: 
+Analyst: 
 Query Run Date:  `r Sys.Date()`
 
 
