--- a/inst/rmd/P1.Rmd
+++ b/inst/rmd/P1.Rmd
@@ -392,7 +392,7 @@ demogTable <-
 knitr::kable(demogTable, col.names=c("Characteristic","Frequency","Percent of unique patients"), row.names=FALSE, format.args = list(big.mark = ","))
 ```
 
-`r ifelse(demogSummary$nDemogRows==demogSummary$nPatsDemog," ","The demographics table has duplicate rows, by person_id")`
+`r if(exists(demogSummary)){ifelse(demogSummary$nDemogRows==demogSummary$nPatsDemog," ","The demographics table has duplicate rows, by person_id")}`
 
  
 ```{r demographic counts, echo = F, include=T, error=T}
